NEW: Section on locomotion

--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \begin{document}
 \begin{multicols*}{4}
     \input{01_Introduction.tex}
+    \input{02_Locomotion.tex}
     \input{04_Perception.tex}
     \input{05_Localization.tex}
     \input{06_Planning.tex}
