NEW: Section on kinematics

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,8 @@
 \usepackage{lmodern}
 \usepackage[fontsize=8pt]{scrextend}
 
+\usepackage{cancel}
+
 \usepackage{cheatsheet}
 \usepackage{math}
 
@@ -12,6 +14,7 @@
 \begin{multicols*}{4}
     \input{01_Introduction.tex}
     \input{02_Locomotion.tex}
+    \input{03_Kinematics.tex}
     \input{04_Perception.tex}
     \input{05_Localization.tex}
     \input{06_Planning.tex}
