NEW: Useful functions form Data.List

--- a/main.tex
+++ b/main.tex
@@ -35,4 +35,5 @@
     \include{./14_ModelChecking.tex}
     \part{Appendix}
     \include{./15_Prelude.tex}
+    \include{./16_List.tex}
 \end{document}
